Escrita da seção 'About '

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
               </div>
-              <br>
               <p>Java</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
               </div>
+              <br>
              
   
               <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
@@ -87,7 +87,12 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>About</h2>
-            <p>TODO</p>
+            <p>Em busca de uma oportunidade de desenvolver-me profissionalmente,
+               colocando em prática aspectos abordados em aula. Fazer um bom trabalho em equipe,
+                colaborando assim com meu crescimento profissional e com a instituição a qual fui engajada.
+                Tenho cetificação pela DIO no Santander (Bootcamp Fullstack Developer), Solyd Offensive Security
+                (Introdução ao Hacking e Pentest) e Desec Security (A Nova Geração em Pentest Profissional)
+              </p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
