--- a/index.html
+++ b/index.html
@@ -98,22 +98,25 @@
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Técnico Suporte Usuário 1NI na Atos</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março 2020 - Abril 2020</h6>
+              <p>•Atender solicitações de chamados por escrito;<br>
+                • Resolver incidentes de acordo com processos estabelecidos (metodologia ITIL);<br>
+                • Dar suporte a dúvidas e orientações sobre informática;<br>
+                • Registrar e protocolar incidentes, seguindo os padrões de qualidade</p>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - TODO</h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Estagiária desenvolvimento Software na MedMobi              </b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Maio 2020 - Julho 2020</h6>
+              <p>Desenvolvimento Front-End do Software de telemedicina</p>
               <hr>
             </div>
-            <div class="w3-container">
+            <!-- <div class="w3-container">
               <h5 class="w3-opacity"><b>TODO</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - TODO</h6>
               <p>TODO</p><br>
-            </div>
+            </div> -->
           </div>
   
           <div class="w3-container w3-card w3-white">
