--- a/index.html
+++ b/index.html
@@ -100,16 +100,24 @@
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Técnico Suporte Usuário 1NI na Atos</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março 2020 - Abril 2020</h6>
-              <p>•Atender solicitações de chamados por escrito;<br>
-                • Resolver incidentes de acordo com processos estabelecidos (metodologia ITIL);<br>
-                • Dar suporte a dúvidas e orientações sobre informática;<br>
-                • Registrar e protocolar incidentes, seguindo os padrões de qualidade</p>
+              <p>
+                <ul>
+                  <li> Atender solicitações de chamados por escrito;</li>
+                  <li> Resolver incidentes de acordo com processos estabelecidos (metodologia ITIL);</li>
+                  <li> Dar suporte a dúvidas e orientações sobre informática;</li>
+                  <li> Registrar e protocolar incidentes, seguindo os padrões de qualidade.</li>
+                </ul>
+              </p>
               <hr>
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Estagiária desenvolvimento Software na MedMobi              </b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Maio 2020 - Julho 2020</h6>
-              <p>Desenvolvimento Front-End do Software de telemedicina</p>
+              <p>
+                <ul>
+                  <li> Desenvolvimento Front-End do Software de telemedicina</li>
+                </ul>
+              </p>
               <hr>
             </div>
             <!-- <div class="w3-container">
