--- a/index.html
+++ b/index.html
@@ -131,21 +131,28 @@
             <h2 class="w3-text-grey w3-padding-16"><i
                 class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
+              <h5 class="w3-opacity"><b>DIO</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><span class="w3-tag w3-teal w3-round">Forever</span></h6>
-              <p>TODO</p>
+              <p>A DIO é o maior ecossistema educacional da América Latina e já impactou mais de 900 mil 
+                pessoas com o desenvolvimento de habilidades técnicas em diversas tecnologias para programação e também 
+                conectando grandes empresas de tecnologia com talentos certificados dentro da própria comunidade.
+                Nesse contexto, realizei as seguintes experiências educacionais na DIO:
+                <ul>
+                  <li><a href="https://www.dio.me/certificate/65FC5508/share" target="_blank">Santander Bootcamp Fullstack Developer</a></li>
+                </ul>
+              </p>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Centro Universitário Filadélfia - UniFil</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2018 - <span class="w3-tag w3-teal w3-round">Incompleto</span></h6>
+              <p>Engenheira de Software</p>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - TODO</h6>
-              <p>TODO</p><br>
+              <h5 class="w3-opacity"><b>Colégio Estadual Vicente Rijo</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2014 - 2017</h6>
+              <p>Ensino Médio</p><br>
             </div>
           </div>
   
@@ -160,12 +167,8 @@
   
     <footer class="w3-container w3-teal w3-center w3-margin-top">
       <p>Find me on social media.</p>
-      <i class="fa fa-facebook-official w3-hover-opacity"></i>
-      <i class="fa fa-instagram w3-hover-opacity"></i>
-      <i class="fa fa-snapchat w3-hover-opacity"></i>
-      <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-      <i class="fa fa-twitter w3-hover-opacity"></i>
-      <i class="fa fa-github w3-hover-opacity"></i>
+      <i class="fa fa-linkedin w3-hover-opacity"><a href="https://github.com/nataliak-kikuti" target="_blank"></a></i>
+      <i class="fa fa-github w3-hover-opacity"><a href="https://www.linkedin.com/in/natalia-kikuti-9221a1173/" target="_blank"></a></i>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
