--- a/index.html
+++ b/index.html
@@ -167,8 +167,10 @@
   
     <footer class="w3-container w3-teal w3-center w3-margin-top">
       <p>Find me on social media.</p>
-      <i class="fa fa-linkedin w3-hover-opacity"><a href="https://github.com/nataliak-kikuti" target="_blank"></a></i>
-      <i class="fa fa-github w3-hover-opacity"><a href="https://www.linkedin.com/in/natalia-kikuti-9221a1173/" target="_blank"></a></i>
+
+      <a href="https://github.com/nataliak-kikuti" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+     
+      <a href="https://www.linkedin.com/in/natalia-kikuti-9221a1173/" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
