--- a/index.html
+++ b/index.html
@@ -133,12 +133,30 @@
             <div class="w3-container">
               <h5 class="w3-opacity"><b>DIO</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><span class="w3-tag w3-teal w3-round">Forever</span></h6>
-              <p>A DIO é o maior ecossistema educacional da América Latina e já impactou mais de 900 mil 
-                pessoas com o desenvolvimento de habilidades técnicas em diversas tecnologias para programação e também 
-                conectando grandes empresas de tecnologia com talentos certificados dentro da própria comunidade.
-                Nesse contexto, realizei as seguintes experiências educacionais na DIO:
+              <p>
                 <ul>
                   <li><a href="https://www.dio.me/certificate/65FC5508/share" target="_blank">Santander Bootcamp Fullstack Developer</a></li>
+                </ul>
+              </p>
+              <hr>
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Desec Security</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><span class="w3-tag w3-teal w3-round">Forever</span></h6>
+              <p>
+                <ul>
+                  <li><a href="https://desecsecurity.com/valida-certificado/VCCF-ZKCSK-FWJX" target="_blank">
+                    Introdução ao Pentest na Prática</a></li>
+                </ul>
+              </p>
+              <hr>
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Solyd Offensive Security</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><span class="w3-tag w3-teal w3-round">Forever</span></h6>
+              <p>
+                <ul>
+                  <li><a href="https://www.dio.me/certificate/65FC5508/share" target="_blank">Introdução ao Hacking e Pentest</a></li>
                 </ul>
               </p>
               <hr>
