preenchimento em ingles

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <h2>Natalia Kazue Kikuti</h2>
             </div>
             <div class="w3-container">
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Engenheira de Software</p>
+              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Software Engineering</p>
               <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Londrina-PR Brazil </p>
               <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>nataliakikuti@gmail.com</p>
               <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>(43) 99107-2829</p>
@@ -63,15 +63,15 @@
              
   
               <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
-              <p>Portugues</p>
+              <p>Portuguese</p>
               <div class="w3-light-grey w3-round-xlarge">
                 <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
               </div>
-              <p>Ingles</p>
+              <p>English</p>
               <div class="w3-light-grey w3-round-xlarge">
                 <div class="w3-round-xlarge w3-teal" style="height:24px;width:20%"></div>
               </div>
-              <p>Espanhol</p>
+              <p>Spanish</p>
               <div class="w3-light-grey w3-round-xlarge">
                 <div class="w3-round-xlarge w3-teal" style="height:24px;width:10%"></div>
               </div>
@@ -87,35 +87,35 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>About</h2>
-            <p>Em busca de uma oportunidade de desenvolver-me profissionalmente,
-               colocando em prática aspectos abordados em aula. Fazer um bom trabalho em equipe,
-                colaborando assim com meu crescimento profissional e com a instituição a qual fui engajada.
-                Tenho cetificação pela DIO no Santander (Bootcamp Fullstack Developer), Solyd Offensive Security
-                (Introdução ao Hacking e Pentest) e Desec Security (A Nova Geração em Pentest Profissional)
+            <p>Looking for an opportunity to develop myself professionally,
+              putting into practice aspects discussed in class. Do good teamwork,
+               thus collaborating with my professional growth and with the institution to which I was engaged.
+               I have DIO certification at Santander (Bootcamp Fullstack Developer), Solyd Offensive Security
+               (Introduction to Hacking and Pentest) and Desec Security (The Next Generation in Professional Pentest)
               </p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Técnico Suporte Usuário 1NI na Atos</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março 2020 - Abril 2020</h6>
+              <h5 class="w3-opacity"><b>Technical Support User 1NI na Atos</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>March 2020 - April 2020</h6>
               <p>
                 <ul>
-                  <li> Atender solicitações de chamados por escrito;</li>
-                  <li> Resolver incidentes de acordo com processos estabelecidos (metodologia ITIL);</li>
-                  <li> Dar suporte a dúvidas e orientações sobre informática;</li>
-                  <li> Registrar e protocolar incidentes, seguindo os padrões de qualidade.</li>
+                  <li> Respond to written call requests;</li>
+                  <li> Resolve incidents according to established processes (ITIL methodology);</li>
+                  <li> Support IT queries and guidance;</li>
+                  <li> Record and log incidents, following quality standards.</li>
                 </ul>
               </p>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Estagiária desenvolvimento Software na MedMobi              </b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Maio 2020 - Julho 2020</h6>
+              <h5 class="w3-opacity"><b>Software development intern at MedMobi              </b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2020 - July 2020</h6>
               <p>
                 <ul>
-                  <li> Desenvolvimento Front-End do Software de telemedicina</li>
+                  <li> Front-End Development of Telemedicine Software</li>
                 </ul>
               </p>
               <hr>
@@ -135,7 +135,8 @@
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><span class="w3-tag w3-teal w3-round">Forever</span></h6>
               <p>
                 <ul>
-                  <li><a href="https://www.dio.me/certificate/65FC5508/share" target="_blank">Santander Bootcamp Fullstack Developer</a></li>
+                  <li><a href="https://www.dio.me/certificate/65FC5508/share" target="_blank">Santander Bootcamp Fullstack 
+                    Developer</a></li>
                 </ul>
               </p>
               <hr>
@@ -146,7 +147,7 @@
               <p>
                 <ul>
                   <li><a href="https://desecsecurity.com/valida-certificado/VCCF-ZKCSK-FWJX" target="_blank">
-                    Introdução ao Pentest na Prática</a></li>
+                    Introduction to Pentest in Practice</a></li>
                 </ul>
               </p>
               <hr>
@@ -156,7 +157,7 @@
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><span class="w3-tag w3-teal w3-round">Forever</span></h6>
               <p>
                 <ul>
-                  <li><a href="https://www.dio.me/certificate/65FC5508/share" target="_blank">Introdução ao Hacking e Pentest</a></li>
+                  <li><a href="https://solyd.com.br/verificar/b2KepvUsp0/" target="_blank">Introduction to Hacking and Pentest</a></li>
                 </ul>
               </p>
               <hr>
@@ -164,13 +165,13 @@
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Centro Universitário Filadélfia - UniFil</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2018 - <span class="w3-tag w3-teal w3-round">Incompleto</span></h6>
-              <p>Engenheira de Software</p>
+              <p>Software Engineering</p>
               <hr>
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Colégio Estadual Vicente Rijo</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2014 - 2017</h6>
-              <p>Ensino Médio</p><br>
+              <p>High school</p><br>
             </div>
           </div>
   
